Bug 439266 - Apps' in-window menubars do not become visible again after removing a global menu applet
Summary: Apps' in-window menubars do not become visible again after removing a global ...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kxmlgui
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.84.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords: usability
: 437167 452320 456320 461457 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-06-28 15:41 UTC by jakobdev
Modified: 2025-02-21 08:12 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jakobdev 2021-06-28 15:41:54 UTC
I had tried the global menu for a few days. After that I deleted the global menu.All programs got their Menubar back in their window, but nor Kate. The Menubar is still not visible.
Comment 1 Paul Worrall 2021-06-29 16:52:34 UTC
I can reproduce this on Kate, and some other applications (tried K3B and Ark), therefore changing product to plasmashell-Global Menu

Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.2
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.3
Kernel Version: 5.8.0-59-generic (64-bit)
Graphics Platform: Wayland
Processors: 2 × AMD A6-6400K APU with Radeon(tm) HD Graphics
Memory: 7.7 GiB of RAM
Graphics Processor: AMD CEDAR
Comment 2 jakobdev 2021-07-02 12:38:06 UTC
While waiting for a fix, is there any way to bring the Menubar back?
Comment 3 Paul Worrall 2021-07-02 20:27:58 UTC
(In reply to jakobdev from comment #2)
> While waiting for a fix, is there any way to bring the Menubar back?

I'm not one of the devs, so there may be a better way, but this worked for me:

Close Kate and use another editor (e.g. vi or nano) to open ~/.local/share/kate/anonymous.katesesssion and remove the two lines that say MenuBar=Disabled
Comment 4 jakobdev 2021-07-04 20:33:27 UTC
That fixed it for me. Thanks.
Comment 5 Nate Graham 2021-08-05 21:36:08 UTC
Yeah, can reproduce. Seems to be a generic issue in KXMLGUI, where the MenuBar=disabled line gets written into apps' config files when the global menu applet is active, but it doesn't get removed afterwards.
Comment 6 Nate Graham 2022-04-06 18:31:52 UTC
*** Bug 452320 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2022-05-02 18:15:08 UTC
*** Bug 441233 has been marked as a duplicate of this bug. ***
Comment 8 Roke Julian Lockhart Beedell 2022-07-05 18:12:58 UTC
*** Bug 456320 has been marked as a duplicate of this bug. ***
Comment 9 Nicolas Fella 2022-11-08 00:50:33 UTC
*** Bug 461457 has been marked as a duplicate of this bug. ***
Comment 10 Bug Janitor Service 2024-02-14 10:13:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kxmlgui/-/merge_requests/213
Comment 11 David Edmundson 2024-02-14 14:40:11 UTC
Git commit ddc46135a0c68fc61efe0025efe47c36c9f40858 by David Edmundson.
Committed on 14/02/2024 at 10:12.
Pushed by davidedmundson into branch 'master'.

kmainwindow: Do not save menu bar visibilty when global menu is in use

KXmlGui tracks the visiblity of the QMenuBar widget to try to know if a
user has explicitly shown/hidden a menu.

When a native menu (global menu bar plasmoid) is in use the widget is
hidden, but not because the user explicitly wanted to not show the menu.

If a native menu bar is in use, it does not make sense to have a
save/restore the user preference for the menu.

M  +3    -2    src/kmainwindow.cpp

https://invent.kde.org/frameworks/kxmlgui/-/commit/ddc46135a0c68fc61efe0025efe47c36c9f40858
Comment 12 Patrick Silva 2024-02-17 12:21:58 UTC
*** Bug 437167 has been marked as a duplicate of this bug. ***
Comment 13 Nico 2024-03-16 18:56:21 UTC
The fix was not affecting systems where “the damage” was already done, so if somebody comes across this issue and is interested in a script I just wrote to force enable all menu bars again see here: https://github.com/D3SOX/scripts/blob/master/force-enable-kde-menubars.sh
Comment 14 Bug Janitor Service 2025-02-20 17:28:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2335
Comment 15 Halla Rempt 2025-02-21 08:12:33 UTC
Git commit b30c45dfa08fb2cea04d5c24a7291fb62db3c286 by Halla Rempt, on behalf of Carl Schwan.
Committed on 21/02/2025 at 08:12.
Pushed by rempt into branch 'master'.

kmainwindow: Do not save menu bar visibilty when global menu is in use

KXmlGui tracks the visiblity of the QMenuBar widget to try to know if a
user has explicitly shown/hidden a menu.

When a native menu (global menu bar plasmoid) is in use the widget is
hidden, but not because the user explicitly wanted to not show the menu.

If a native menu bar is in use, it does not make sense to have a
save/restore the user preference for the menu.

Backport of ddc46135a0c68fc61efe0025efe47c36c9f40858 from kxmlgui
Co-Authored-By: David Edmundson <kde@davidedmundson.co.uk>

M  +2    -2    libs/widgetutils/xmlgui/kmainwindow.cpp

https://invent.kde.org/graphics/krita/-/commit/b30c45dfa08fb2cea04d5c24a7291fb62db3c286